--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "guld-config",
+  "name": "guld-git-config",
   "version": "1.1.1",
   "description": "Guld configuration helper manages git config files.",
   "main": "index.js",
@@ -16,7 +16,7 @@
   "author": "isysd",
   "license": "MIT",
   "dependencies": {
-    "guld-env": "^0.3.0",
+    "guld-env": "^1.0.2",
     "guld-fs": "^1.0.0",
     "guld-git-dir": "^1.0.0",
     "ini": "^1.3.5",
