--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guld-git-config",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Guld configuration helper manages git config files.",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,7 @@
   "dependencies": {
     "guld-env": "^1.0.2",
     "guld-fs": "^1.0.0",
-    "guld-git-dir": "^1.0.0",
+    "guld-git-path": "^1.0.0",
     "ini": "^1.3.5",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
