--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "author": "isysd",
   "license": "MIT",
   "dependencies": {
-    "guld-env": "^1.0.2",
+    "git-config-ini": "git+https://github.com/isysd/git-config-ini.git",
     "guld-fs": "^1.0.0",
-    "guld-git-path": "^1.0.0",
-    "ini": "^1.3.5",
+    "guld-git-path": "^1.0.1",
+    "guld-user": "^0.5.0",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "lodash.unset": "^4.5.2",
